concept model logging

--- a/estimate/concept_bottleneck-500.ipynb
+++ b/estimate/concept_bottleneck-500.ipynb
@@ -51,7 +51,6 @@
     "import lightning as L\n",
     "from concept import ConceptBottleneck, LitConcept\n",
     "\n",
-    "concepts\n",
     "model = ConceptBottleneck()\n",
     "lit_model = LitConcept(model)\n",
     "trainer = L.Trainer(max_epochs=70, default_root_dir=\"concept_logs\")\n",
@@ -70,9 +69,9 @@
     "p_hat = []\n",
     "with torch.no_grad():\n",
     "  for x, c, _ in loaders[\"train\"]:\n",
-    "    p_hat.append(lit_model.model(x)[1])\n",
+    "    p_hat.append(lit_model.model(x.to(\"cpu\"))[1].cpu())\n",
     "  for x, c, _ in loaders[\"validate\"]:\n",
-    "    p_hat.append(lit_model.model(x)[1])\n",
+    "    p_hat.append(lit_model.model(x.to(\"cpu\"))[1].cpu())\n",
     "\n",
     "pd.DataFrame(torch.concatenate(p_hat)).to_csv(\"../data/p_hat_concept.csv\")"
    ]
